--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Exercice JavaScript</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+
   </head>
   <body>
     <header>
@@ -39,9 +41,9 @@
             </tr>
           </tbody>
         </table>
-        <button>Acheter un sac de pommes</button>
-        <button>Acheter un sac de poires</button>
-        <button>Acheter un sac de prunes</button>
+        <button id="AppleButton">Acheter un sac de pommes</button>
+        <button id="PoiresButton">Acheter un sac de poires</button>
+        <button id="PrunesButton">Acheter un sac de prunes</button>
       </section>
       <section>
         <h2>Vos achats</h2>
